Añade los iconos de contacto

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,8 @@
       "@/components": [
         "src/components/*"
       ],
-      "@/icons": [
-        "src/icons/*"
+      "@/assets": [
+        "src/assets/*"
       ],
     }
   }
